--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,15 @@
   overflow:hidden !important;
 }
 
+.ui-dialog.bav .ui-dialog-title {
+  background-image:url('../../bav/img/bav-color.svg');
+  background-size:18px;
+  background-repeat:no-repeat;
+  background-origin:padding-box;
+  background-position:left middle;
+  padding-left: 2em;
+}
+
 .bank-account-validator td.label {
   padding-right: 1em;
 }
