--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,37 @@
  */
 .ui-dialog.bav {
   overflow:hidden !important;
-  max-width:none;
-  z-index:2000;
+  max-width:100%;
+  max-height:100%;
+  z-index:100;
   padding:0px;
+  box-sizing:border-box;
 }
 
-.ui-dialog.bav ~ .oc-dialog {
-  z-index:2000;
+@media only screen and (max-width: 768px) {
+  /* /\*Reduce z-index of header in order to allow for full-screen dialogs.*\/ */
+  /* #body-user #header, */
+  /* #body-settings #header, */
+  /* #body-public #header { */
+  /*   z-index:1000; */
+  /* } */
+
+  /* .ui-dialog.bav { */
+  /*   z-index:1000; */
+  /*   left:0px !important; */
+  /*   top:0px !important; */
+  /*   max-height: 100% !important; */
+  /*   max-width: 100% !important; */
+  /*   height: 100% !important; */
+  /*   width: 100% !important; */
+  /*   min-height: 100% !important; */
+  /*   min-width: 100% !important;     */
+  /* } */
+  
+  .ui-dialog.bav .ui-dialog-content {
+    overflow:auto !important;
+    padding:0.3em !important;
+  }
 }
 
 .ui-dialog.bav .ui-dialog-buttonpane {
